# UXF-extensions

./: .gitignore  README.md  package.json
Assets/: ExperimentManager.cs  ubc.ok.ovilab.uxf.extensions.asmdef
Assets/Scripts/: BlockData.cs  ExperimentManager.cs
Assets/UXF/: UXF.asmdef
Assets/UXF/Prefabs/: [UXF_Rig].prefab
Assets/UXF/Tests/: UXF.Tests.asmdef
Docs~/: activity_chart.plantuml  state_diagram.plantuml
Editor/: DataSourceEditor.cs  ExperimentManagerEditor.cs  ubco.ovilab.uxf.extensions.editor.asmdef
Runtime/: ubco.ovilab.uxf.extensions.asmdef
Runtime/Scripts/: BlockData.cs  DataSource.cs  ExperimentManager.cs  ExperimentManagerState.cs  IExperimentCalibration.cs  IExperimentManager.cs  MoveToStateResult.cs
Runtime/UXF/: UXF.asmdef
Runtime/UXF/Scripts/: Session.cs
Runtime/UXF/Scripts/DataHandling/: FileSaver.cs  HTTPPost.cs  LocalFileDataHander.cs
Runtime/UXF/Scripts/Etc/: ResultsDict.cs  Tracker.cs  Trial.cs
Runtime/UXF/Scripts/Trackers/: PositionRotationTracker.cs
Runtime/UXF/Tests/Editor/: TestFileIOManager.cs
Samples~/Experiment/: README.md  pyproject.toml
Samples~/Experiment/Assets/: study.toml
Samples~/SampleImplementation/Resources/: LocalDataSource.asset  RemoteDataSource.asset
Samples~/SampleImplementation/Scenes/: SampleUXFExtensionScene.unity
Samples~/SampleImplementation/Scripts/: SampleExperimentManager.cs  ubco.ovilab.uxf.extensions.sample.asmdef
Tests/: TestDataSource.asset  TestExperimentManager.cs  [UXF_Rig] Test.prefab  test-data.json  ubco.ovilab.uxf.extensions.tests.asmdef
(+7 files in other folders)
