[tool.poetry]
name = "external"
version = "0.1.0"
description = "Experiment server assets"
authors = ["Shariff Faleel <shariff.mfa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
experiment-server = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
